fixed top bar issue on mobile

--- a/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
@@ -859,8 +859,7 @@ nav {
         padding:0 11px;
       }
       @include breakpoint($mobile) {
-        float:none;
-        padding:0 15px;
+        float:none;        
         display:inline-block;
         vertical-align:top;
       }
